--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==21.4.0
 certifi==2022.5.18.1
 Django==3.2.5
 django-decouple==2.1
+django-rest-auth==0.9.5
 djangorestframework==3.13.1
 Faker==12.0.1
 iniconfig==1.1.1
