--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,39 @@
 asgiref==3.4.1
 attrs==21.4.0
 certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==37.0.2
+defusedxml==0.7.1
 Django==3.2.5
+django-allauth==0.50.0
 django-decouple==2.1
 django-rest-auth==0.9.5
 djangorestframework==3.13.1
 Faker==12.0.1
+idna==3.3
 iniconfig==1.1.1
 mixer==7.2.2
+oauthlib==3.2.0
 packaging==21.3
 pip==21.2.4
 pluggy==1.0.0
 psycopg2==2.8.6
 py==1.11.0
+pycparser==2.21
+PyJWT==2.4.0
 pyparsing==3.0.9
 pytest==7.1.2
 pytest-django==4.5.2
 python-dateutil==2.8.2
+python3-openid==3.2.0
 pytz==2021.3
+requests==2.27.1
+requests-oauthlib==1.3.1
 setuptools==61.2.0
 six==1.16.0
 sqlparse==0.4.1
 tomli==2.0.1
 typing_extensions==4.1.1
+urllib3==1.26.9
 wheel==0.37.1
